<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/content_description"
        android:scaleType="fitStart"
        tools:srcCompat="@tools:sample/avatars"
        />
    <TextView
        android:id="@+id/movie_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="8.5"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="14dp"
        android:textColor="@color/md_white_1000"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/background_ratings" />

    </RelativeLayout>

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="2"
        android:ellipsize="marquee"
        android:text="@string/movie_title"
        android:textColor="@color/md_white_1000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/movie_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        tools:text="@string/release_date"
        android:textColor="@color/md_yellow_400" />
</LinearLayout>